# muzlib

./: README.md  pyproject.toml
.github/workflows/: aur-publish.yml
deploy/linux/: PKGBUILD
src/muzlib/: __main__.py  cli.py  files_utils.py  logging_utils.py  lyrics_utils.py  muzlib.py  text_utils.py
src/muzlib/assets/: cookies.txt
src/muzlib/tag_utils/: mp3.py  opus.py  tag_utils.py
tests/: test_files_utils.py  test_lyrics_utils.py  test_muzlib.py  test_text_utils.py
tests/tag_utils/: test_mp3.py  test_opus.py  test_tag_utils.py
