[project]
name = "muzlib"
version = "0.2.1"
description = "Muzlib is a Python script that allows you to create your own music library."
readme = "README.md"
authors = [
    { name = "Yauheni Zviazdou", email = "ezvezdov22@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mutagen>=1.47.0",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "syncedlyrics>=1.0.1",
    "yt-dlp>=2025.12.8",
    "yt-dlp-ejs>=0.8.0",
    "ytmusicapi>=1.11.3",
]

[project.scripts]
muzlib = "muzlib.muzlib:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
muzlib = ["*.txt"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
