[project]
name = "muzlib"
version = "0.4"
license = "GPL-3.0-or-later"
description = "Muzlib is a Python script that allows you to create your own music library."
readme = "README.md"
authors = [
    { name = "Yauheni Zviazdou", email = "ezvezdov22@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "deno>=2.7.12",
    "mutagen>=1.47.0",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "syncedlyrics>=1.0.1",
    "yt-dlp>=2025.12.8",
    "yt-dlp-ejs>=0.8.0",
    "ytmusicapi>=1.11.3",
]

[project.scripts]
muzlib-cli = "muzlib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
muzlib = ["*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
]

